# poetry-lambda-2

./: .gitignore  build.sh  buildspec.yaml  nobuildspec.yaml  pyproject.toml  template.yaml
src/: handler.py  new_user_handler.py
tests/: handler_test.py  new_user_handler_test.py
