[tool.poetry]
name = "poetry-lambda"
version = "0.1.0"
description = ""
authors = ["Orestis Gkorgkas <orestis.gorgas@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_lambda"}]

[tool.poetry.dependencies]
python = "^3.9"
moto = "4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.2"
assertpy = "1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
python_files = "*test.py"
python_classes = "*Test"
python_functions = "should_*"

